--- a/Source/AbsInt/AbsInt.csproj
+++ b/Source/AbsInt/AbsInt.csproj
@@ -201,7 +201,9 @@
     <Compile Include="TrivialDomain.cs" />
     <Compile Include="NativeLattice.cs" />
     <Compile Include="Traverse.cs" />
-    <Compile Include="..\version.cs" />
+    <Compile Include="..\version.cs">
+      <Link>version.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Basetypes\Basetypes.csproj">
