--- a/Source/BoogieDriver/BoogieDriver.csproj
+++ b/Source/BoogieDriver/BoogieDriver.csproj
@@ -193,7 +193,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoogieDriver.cs" />
-    <Compile Include="..\version.cs" />
+    <Compile Include="..\version.cs">
+      <Link>version.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AbsInt\AbsInt.csproj">
