--- a/Source/Core/Core.csproj
+++ b/Source/Core/Core.csproj
@@ -163,8 +163,10 @@
     <Compile Include="Util.cs" />
     <Compile Include="VariableDependenceAnalyser.cs" />
     <Compile Include="VCExp.cs" />
-    <Compile Include="..\version.cs" />
     <Compile Include="Xml.cs" />
+    <Compile Include="..\version.cs">
+      <Link>version.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Basetypes\Basetypes.csproj">
