--- a/Source/Doomed/Doomed.csproj
+++ b/Source/Doomed/Doomed.csproj
@@ -134,6 +134,9 @@
     <Compile Include="DoomErrorHandler.cs" />
     <Compile Include="HasseDiagram.cs" />
     <Compile Include="VCDoomed.cs" />
+    <Compile Include="..\version.cs">
+      <Link>version.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Basetypes\Basetypes.csproj">
