--- a/Source/Predication/Predication.csproj
+++ b/Source/Predication/Predication.csproj
@@ -130,6 +130,9 @@
   <ItemGroup>
     <Compile Include="SmartBlockPredicator.cs" />
     <Compile Include="UniformityAnalyser.cs" />
+    <Compile Include="..\version.cs">
+      <Link>version.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Basetypes\Basetypes.csproj">
