--- a/Source/Provers/SMTLib/SMTLib.csproj
+++ b/Source/Provers/SMTLib/SMTLib.csproj
@@ -146,10 +146,12 @@
     <Compile Include="SMTLibNamer.cs" />
     <Compile Include="SMTLibProcess.cs" />
     <Compile Include="TypeDeclCollector.cs" />
-    <Compile Include="..\..\version.cs" />
     <Compile Include="Z3.cs" />
     <Compile Include="Yices2.cs" />
     <Compile Include="CVC4.cs" />
+    <Compile Include="..\..\version.cs">
+      <Link>version.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Basetypes\Basetypes.csproj">
