--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,9 @@ install:
   - unzip z3*.zip
   # NuGet is a little flakey in legacy TravisCI, use travis_retry command to retry the command if it fails
   - travis_retry nuget restore ${TRAVIS_SOLUTION}
+  - travis_retry nuget install -Version 3.10.0 NUnit.Console -OutputDirectory Source/packages/
   # Install needed python tools
   - sudo pip install lit OutputCheck pyyaml
-  - mkdir -p Source/packages && cd Source/packages && travis_retry nuget install NUnit.Runners -Version 2.6.3
-  - cd ../../
 script:
   - msbuild /p:Configuration=${BOOGIE_CONFIG} ${TRAVIS_SOLUTION}
   # Run unit tests
